@@ -1,9 +1,15 @@
 2014-09-09  Albert Graef  <aggraef@gmail.com>
 
+	* More LLVM 3.5 compatibility fixes related to the batch compiler.
+	LLVM 3.5 now has a new user_iterator class to iterate over the
+	uses of variables and functions in an instruction; the old
+	use_iterator class can't be used for that purpose any more.
+
 	* interpreter.cc (interpreter::compiler): For LLVM 3.3 and later,
 	let llc create native objects directly from the LLVM source. This
-	should speed up compilation and also work around bugs which make
-	llc generate invalid native assembler code on some systems.
+	should speed up compilation in the batch compiler and also work
+	around bugs which make llc generate invalid native assembler code
+	on some systems.
 
 2014-09-08  Albert Graef  <aggraef@gmail.com>
 
